<resources>
    <string name="app_name">dtsdesigntolayout</string>
    <string name="logo_text">DTS Kominfo</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="get_started">Get Started</string>
    <string name="log_in">Log In</string>
    <string name="reset_code">Reset Code</string>
    <string name="enter_your_reset_code">Enter Your Reset Code</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="send_request">Send Request</string>
    <string name="change_password">Change Password</string>
    <string name="register">Register</string>
    <string name="register_new_account">Register New Account</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="register_now">Register Now!</string>
    <string name="dts_registration">DTS Registration</string>
</resources>
